# cfrm

./: .gitignore  README.md  pyproject.toml
notebooks/501/: hw4_data.csv  hw7_data.csv  revtsov_501_hw2-Copy1.ipynb  revtsov_501_hw4.ipynb  revtsov_501_hw6.ipynb  revtsov_501_hw7-Copy1.ipynb  revtsov_501_hw7.ipynb  revtsov_501_hw7_v2.ipynb
notebooks/501/.ipynb_checkpoints/: revtsov_501_hw2-Copy1-checkpoint.ipynb  revtsov_501_hw2-checkpoint.ipynb  revtsov_501_hw3-checkpoint.ipynb  revtsov_501_hw4-checkpoint.ipynb  revtsov_501_hw7-Copy1-checkpoint.ipynb  revtsov_501_hw7-checkpoint.ipynb  revtsov_501_hw7_v2-checkpoint.ipynb
notebooks/502/: Untitled1.ipynb  big_mac_data.Rdata  central_bank_data.Rdata  forwardrates_data.Rdata  homework8_data.Rdata  hw1.ipynb  hw3.ipynb  hw4.ipynb  hw6.ipynb  hw7.ipynb  problem_3_data.Rdata
notebooks/502/.ipynb_checkpoints/: hw1-checkpoint.ipynb  hw2-checkpoint.ipynb  hw4-checkpoint.ipynb  hw5-checkpoint.ipynb  hw7-checkpoint.ipynb  hw8-checkpoint.ipynb
notebooks/503/: AGG.csv  Commodity ETF Short List.csv  EEM_daily.csv  EFA_daily.csv  F-F_Research_Data_5_Factors_2x3.csv  FinalProjectData.xlsx  HW43DATA.csv  IWM.csv  IWM_daily.csv  LQD_daily.csv  Project1Data.xlsx  SHY_daily.csv  Untitled1.ipynb  VNQ.csv  VNQ_daily.csv  final_project_part2.ipynb  hw1.ipynb  hw1_corr.csv  hw1_labels.csv  hw1_mean.csv  hw1_std.csv  hw2.ipynb  hw4.ipynb  midterm_project.ipynb  midterm_project_part1.ipynb  midterm_project_part2-clean-Copy1.ipynb  midterm_project_part2.ipynb  midterm_project_part2_final.ipynb  portfolio_optimization.py  project1_notes
notebooks/503/.ipynb_checkpoints/: Hw4.3Data - Copy-checkpoint.csv  IWB_daily-checkpoint.csv  Project1_solution_part1-checkpoint.R  final_project_notes-checkpoint.txt  final_project_part1-checkpoint.ipynb  hw1-checkpoint.ipynb  hw2-checkpoint.ipynb  hw3-checkpoint.ipynb  hw4-checkpoint.ipynb  midterm_project-checkpoint.ipynb  midterm_project_part2-checkpoint.ipynb  midterm_project_part2_final-checkpoint.ipynb  (+2 more)
notebooks/504/: input.txt  revtsov_504_hw3.ipynb  revtsov_504_hw6-Copy1.ipynb  revtsov_504_hw6_final.ipynb
notebooks/507/: 2024_HW4.1Data.xlsx  final_project_backup.ipynb  final_project_flatten_mix.ipynb  final_project_higher_precision.ipynb  hw2.ipynb  hw2_prob1_python.ipynb  hw2_prob2.ipynb  hw2_prob3.ipynb  hw3_prob1.ipynb  hw4.ipynb
notebooks/521/: Homework1.html  Homework1.ipynb  Homework2.html  Homework2.ipynb  Homework4.html  Homework4.ipynb
notebooks/541/: HW1.ipynb  OptionsPivotTables.xlsm  hw2_py.ipynb  hw2_r.ipynb  options_scenarios_with_pivot.xlsx
(+16 files in other folders)
